Change equations.h/cpp and added tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ project(
     "Algorithm to find the root of a function. The Newton Raphson algorithm."
   LANGUAGES CXX)
 
-add_executable(NewtonRaphsonSolver src/main.cpp src/solver.cpp src/helper.cpp src/equations.cpp)
+add_executable(NewtonRaphsonSolver src/main.cpp src/Solver.cpp src/helper.cpp
+                                   src/Equation.cpp)
+
 enable_testing()
 add_test(NAME mytest COMMAND Test)
-add_executable(Test src/test.cpp src/equations.cpp src/helper.cpp)
+add_executable(Test src/test.cpp src/Equation.cpp src/helper.cpp src/Solver.cpp)
